Issue #10211 : Buffer object should support the new buffer interface.